feat(init-frontend): setup frontend env
